--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "start": "nodemon src/index.ts"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
@@ -17,8 +18,8 @@
     "@types/yup": "^0.29.14",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
+    "nodemon": "^2.0.19",
     "prettier": "^2.7.1",
-    "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
   "keywords": [],
@@ -34,6 +35,8 @@
     "express": "^4.18.1",
     "mongoose": "^6.5.2",
     "nanoid": "^4.0.0",
+    "ts-node": "^10.9.1",
+    "tslib": "^2.4.0",
     "yup": "^0.32.11"
   }
 }
