--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "prepare": "husky install",
-    "start": "nodemon src/index.ts"
+    "start": "ts-node-dev --respawn --transpile-only src/index.ts"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
@@ -18,8 +18,9 @@
     "@types/yup": "^0.29.14",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
-    "nodemon": "^2.0.19",
     "prettier": "^2.7.1",
+    "rollup": "^2.78.0",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
   },
   "keywords": [],
@@ -35,8 +36,6 @@
     "express": "^4.18.1",
     "mongoose": "^6.5.2",
     "nanoid": "^4.0.0",
-    "ts-node": "^10.9.1",
-    "tslib": "^2.4.0",
     "yup": "^0.32.11"
   }
 }
