--- a/package.json
+++ b/package.json
@@ -5,38 +5,25 @@
   "main": "index.js",
   "scripts": {
     "prepare": "husky install",
-    "start": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "build": "echo \"success\""
+    "dev": "turbo dev",
+    "build": "turbo build",
+    "test": "turbo test"
   },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,md,html,css}": "prettier --write"
+  },
+  "author": {
+    "name": "tnagji",
+    "url": "https://github.com/Tangjj1996"
+  },
+  "license": "ISC",
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
     "@st-fool/prettier": "^0.0.3",
-    "@types/body-parser": "^1.19.2",
-    "@types/config": "^3.3.0",
-    "@types/express": "^4.17.13",
-    "@types/node": "^18.7.3",
-    "@types/yup": "^0.29.14",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
-    "rollup": "^2.78.0",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^4.7.4"
-  },
-  "keywords": [],
-  "lint-staged": {
-    "*.{js,jsx,ts,tsx,md,html,css}": "prettier --write"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.20.0",
-    "config": "^3.3.7",
-    "cors": "^2.8.5",
-    "express": "^4.18.1",
-    "mongoose": "^6.5.2",
-    "nanoid": "^3.0.0",
-    "yup": "^0.32.11"
+    "turbo": "^1.4.3"
   }
 }
