--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,11 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "echo \"success\""
   },
   "devDependencies": {
-    "@st-fool/prettier": "^0.0.3",
     "@types/body-parser": "^1.19.2",
     "@types/config": "^3.3.0",
     "@types/express": "^4.17.13",
