--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,9 +5,13 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "build": "echo \"success\""
+    "build": "rollup -c"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^22.0.2",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@rollup/plugin-typescript": "^8.3.4",
     "@types/body-parser": "^1.19.2",
     "@types/config": "^3.3.0",
     "@types/express": "^4.17.13",
@@ -15,6 +19,7 @@
     "@types/yup": "^0.29.14",
     "rollup": "^2.78.0",
     "ts-node-dev": "^2.0.0",
+    "tslib": "^2.4.0",
     "typescript": "^4.7.4"
   },
   "license": "ISC",
